--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
 }
+
+a {
+  text-decoration: none;
+  color: #1976d2;
+  font-weight: bold;
+}
+a:hover {
+  text-decoration: underline;
+}
